auto-test/tests/chapter_17/invalid_types/void/non_void_return.c
void x(void) {
  
  return 1;
}

int main(void) {
  x();
  return 0;
}